[gd_scene load_steps=2 format=3 uid="uid://c0l754b5hdtkr"]

[ext_resource type="Script" uid="uid://dpqrw2x1isfim" path="res://scripts/ui/pause_screen.gd" id="1_milqs"]

[node name="PauseScreen" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_milqs")

[node name="PauseContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PauseContainer/MarginContainer"]
layout_mode = 2
color = Color(0.45098, 0.45098, 0.45098, 0.380392)

[node name="MarginContainer" type="MarginContainer" parent="PauseContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="PauseContainer/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PauseContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Resume"

[node name="Reload Scene" type="Button" parent="PauseContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Reload Scene"

[node name="Exit" type="Button" parent="PauseContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Exit"

[connection signal="pressed" from="PauseContainer/MarginContainer/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseContainer/MarginContainer/MarginContainer/VBoxContainer/Reload Scene" to="." method="_on_reload_scene_pressed"]
[connection signal="pressed" from="PauseContainer/MarginContainer/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
